fix(arc-244): adjust pagination layout on mobile screens

--- a/src/modules/shared/components/PaginationBar/PaginationBar.module.scss
+++ b/src/modules/shared/components/PaginationBar/PaginationBar.module.scss
@@ -6,11 +6,15 @@ $component: "c-pagination-bar";
 	& > span,
 	> div,
 	> button {
-		&:nth-child(2n + 1) {
+		&:nth-child(3n + 1) {
 			justify-self: left;
 		}
 
-		&:nth-child(2n + 2) {
+		&:nth-child(3n + 2) {
+			justify-self: center;
+		}
+
+		&:nth-child(3n + 3) {
 			justify-self: right;
 			margin-right: -$button-horizontal-whitespace;
 		}
@@ -45,6 +49,11 @@ $component: "c-pagination-bar";
 	align-items: center;
 	justify-items: center;
 
+	:global(.c-pagination) {
+		grid-row-start: 1;
+		grid-column: 1 / 3;
+	}
+
 	&:not(.#{$component}--back-to-top) {
 		@include c-pagination-bar-two-item-justify;
 	}
@@ -60,6 +69,10 @@ $component: "c-pagination-bar";
 
 		@include respond-at("md") {
 			@include c-pagination-bar-three-item-justify;
+
+			:global(.c-pagination) {
+				grid-column: 2 / 3;
+			}
 		}
 		
 		.#{$component} {
